0.1.5
- fixed attributes bug where if an object is committed, its lazy-loaded list got 
blown away if it hadnt been loaded

0.1.4
- create_engine() now uses genericized parameters; host/hostname, db/dbname/database, 
password/passwd, etc. for all engine connections. makes engine URIs much more "universal"
- added support for SELECT statements embedded into a column clause, using the flag
"scalar=True"
- another overhaul to EagerLoading when used in conjunction with mappers that
inherit; improvements to eager loads figuring out their aliased queries
correctly, also relations set up against a mapper with inherited mappers will
create joins against the table that is specific to the mapper itself (i.e. and
not any tables that are inherited/are further down the inheritance chain),
this can be overridden by using custom primary/secondary joins.
- added J.Ellis patch to mapper.py so that selectone() throws an exception 
if query returns more than one object row, selectfirst() to not throw the 
exception. also adds selectfirst_by (synonymous with get_by) and selectone_by
- added onupdate parameter to Column, will exec SQL/python upon an update
statement.Also adds "for_update=True" to all DefaultGenerator subclasses
- added support for Oracle table reflection contributed by Andrija Zaric; 
still some bugs to work out regarding composite primary keys/dictionary selection
- checked in an initial Firebird module, awaiting testing.
- added sql.ClauseParameters dictionary object as the result for 
compiled.get_params(), does late-typeprocessing of bind parameters so 
that the original values are easier to access
- more docs for indexes, column defaults, connection pooling, engine construction
- overhaul to the construction of the types system.  uses a simpler inheritance pattern
so that any of the generic types can be easily subclassed, with no need for TypeDecorator.
- added "convert_unicode=False" parameter to SQLEngine, will cause all String types to 