@@ -1,6 +1,8 @@
 0.1.5
 - fixed attributes bug where if an object is committed, its lazy-loaded list got 
 blown away if it hadnt been loaded
+- added unique_connection() method to engine, connection pool to return a connection
+that is not part of the thread-local context or any current transaction
 
 0.1.4
 - create_engine() now uses genericized parameters; host/hostname, db/dbname/database, 
